Resolves #112, Related to #92: Added two new fields on the character sheet; fumble range and openRoll range. ABFEExploderRoll will use this values when available instead of DEFAULT_FUMBLE_RANGE and DEFAULT_OPEN_RANGE. When rolling an ability > 200 the fumble range decreases by 1.

--- a/src/templates/actor/parts/settings/settings.hbs
+++ b/src/templates/actor/parts/settings/settings.hbs
@@ -1,3 +1,4 @@
 <div class='settings'>
   {{> "systems/animabf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
+  {{> "systems/animabf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
 </div>
