--- a/src/templates/common/ui/horizontal-titled-input.hbs
+++ b/src/templates/common/ui/horizontal-titled-input.hbs
@@ -8,6 +8,7 @@
             '
             {{#if this.rollable}}
       data-roll="{{#if this.rollableDice}}{{this.rollableDice}}{{else}}1d100xa{{/if}}+{{#if (and this.rollSecondaryInput this.hasSecondaryInput)}}{{this.secondaryInputValue}}{{else}}{{this.inputValue}}{{/if}}"
+      data-extra="{{this.inputValue}}"
               data-label="
               {{#if this.rollableMessage}}
                 {{this.rollableMessage}}
