#43, #109, #110: Añadida opción a todas las pestañas de defensa para no tirar dado + Crear pestaña acumulación

--- a/src/scss/dialog/combat-defense-dialog.scss
+++ b/src/scss/dialog/combat-defense-dialog.scss
@@ -90,5 +90,12 @@
         text-align: center;
       }
     }
+
+    .columns {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
