#109, #110: Añadida la opción 'sin tirada' al dialogo de ataque

--- a/src/scss/dialog/combat-attack-dialog.scss
+++ b/src/scss/dialog/combat-attack-dialog.scss
@@ -86,5 +86,12 @@
     .abf-button {
       margin-top: 2rem;
     }
+
+    .columns {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
