--- a/src/templates/dialog/combat/combat-defense/parts/damage-resistance.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/damage-resistance.hbs
@@ -1,22 +1,22 @@
-{{>
-  "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-    title=(localize 'macros.combat.dialog.surprised.title')
-    inputType="checkbox"
-    inputName="defender.resistance.surprised"
-    inputValue=(is 'eq' this.defender.resistance.surprised true)
-  }}
+<div class='defense-buttons'>
+  {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      title=(localize 'macros.combat.dialog.surprised.title')
+      inputType="checkbox"
+      inputName="defender.resistance.surprised"
+      inputValue=(is 'eq' this.defender.resistance.surprised true)
+    }}
+</div>
 
 {{#if this.defenseSent}}
-  <div class='defense-sent'>
+  <div class='columns'>
     {{>'systems/animabf/templates/common/ui/loading-indicator.hbs' class="big"}}
     <p class='label'>
       {{localize 'macros.combat.dialog.defenseSent.title'}}
     </p>
   </div>
 {{else}}
-  <div class='defense-buttons'>
-    <button class='abf-button send-defense-damage-resistance'>
-      {{localize 'macros.combat.dialog.defenseButton.title'}}
-    </button>
-  </div>
+  <button class='abf-button send-defense-damage-resistance'>
+    {{localize 'macros.combat.dialog.defenseButton.title'}}
+  </button>
 {{/if}}
