--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -157,6 +157,14 @@
         grid-column-gap: 0.25rem;
       }
 
+      .regeneration {
+        margin-top: 0.5rem;
+
+        display: grid;
+        grid-template-columns: 3fr 4fr 4fr;
+        grid-column-gap: 0.25rem;
+      }
+
       .first-row {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
