--- a/src/templates/actor/parts/header/parts/common-resources.hbs
+++ b/src/templates/actor/parts/header/parts/common-resources.hbs
@@ -79,7 +79,7 @@
       }}
     </div>
     <div class='regeneration'>
-      {{>
+        {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="movement"
         title=(localize 'anima.ui.general.regeneration.regenerationType.title')
@@ -89,23 +89,31 @@
         disableSecondaryInput=true
         secondaryInputName="data.characteristics.secondaries.regenerationType.final.value"
         secondaryInputValue=data.data.characteristics.secondaries.regenerationType.final.value
-      }}
-      {{>
+        }}
+        {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="movement"
         title=(localize 'anima.ui.general.regeneration.resting.title')
         disabled=true
         inputName="data.characteristics.secondaries.regeneration.resting.value"
-        inputValue=data.data.characteristics.secondaries.regeneration.resting.value
-      }}
-      {{>
+        inputValue=(concat data.data.characteristics.secondaries.regeneration.resting.value (localize (concat "anima.ui.general.regeneration.period." data.data.characteristics.secondaries.regeneration.resting.period ".title")))
+        }}
+        {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="running"
         title=(localize 'anima.ui.general.regeneration.notResting.title')
         disabled=true
         inputName="data.characteristics.secondaries.regeneration.normal.value"
-        inputValue=data.data.characteristics.secondaries.regeneration.normal.value
-      }}
+        inputValue=(concat data.data.characteristics.secondaries.regeneration.normal.value (localize (concat "anima.ui.general.regeneration.period." data.data.characteristics.secondaries.regeneration.normal.period ".title")))
+        }}
+        {{>
+      "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+        class="running"
+        title=(localize 'anima.ui.general.regeneration.penaltyReduction.title')
+        disabled=true
+        inputName="data.characteristics.secondaries.regeneration.recovery.value"
+        inputValue=(concat data.data.characteristics.secondaries.regeneration.recovery.value (localize (concat "anima.ui.general.regeneration.period." data.data.characteristics.secondaries.regeneration.recovery.period ".title")))
+        }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
