#119: Calculo de la regeneracion completado, falta introducir los campos en la ficha

--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -161,8 +161,14 @@
         margin-top: 0.5rem;
 
         display: grid;
-        grid-template-columns: 3fr 4fr 4fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-column-gap: 0.25rem;
+
+        .info-container {
+          .input-container {
+            width: 6.5rem;
+          }
+        }
       }
 
       .first-row {
