--- a/src/scss/items/spell/spell.scss
+++ b/src/scss/items/spell/spell.scss
@@ -93,6 +93,28 @@
       }
     }
 
+    .description {
+      display: flex;
+      justify-content: start;
+      padding-top: 0.5rem;
+
+      .label {
+        align-self: flex-start;
+        padding-right: 0.5rem;
+      }
+      .editor {
+        @include input;
+
+        font-weight: inherit;
+
+        height: 6rem;
+        width: 100%;
+
+        margin-top: 0;
+        border-radius: 0.5rem;
+      }
+    }
+
     .spell-footer {
       width: 100%;
       display: flex;
