--- a/src/templates/items/spell/spell.hbs
+++ b/src/templates/items/spell/spell.hbs
@@ -86,11 +86,10 @@
           gradeName='arcane'
           grade=data.data.grades.arcane
         }}
-      {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
-      {{#> "systems/animabf/templates/common/ui/group-body.hbs"
-        class="spell"
-      }}
-        {{editor content=data.data.description.value target=(concat "data.dynamic.spells." data._id ".data.description.value") button=true owner=true editable=true}}
+        <div class="description">
+          <p class='label'>{{localize "anima.ui.mystic.spell.grade.description.title"}}</p>
+          {{editor content=data.data.description.value target=(concat "data.description.value") button=true owner=true editable=true}}
+        </div>
       {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
       {{#> "systems/animabf/templates/common/ui/group-footer.hbs"}}
         <div class='spell-footer'>
