use general description label in psychic powers

--- a/src/templates/items/psychicPower/psychicPower.hbs
+++ b/src/templates/items/psychicPower/psychicPower.hbs
@@ -57,7 +57,7 @@
           </div>
         {{/each}}
         <div class="description">
-          <p class='label'>{{localize "anima.ui.mystic.spell.grade.description.title"}}</p>
+          <p class='label'>{{localize "anima.ui.descriptionSection.title"}}</p>
           {{editor content=data.data.description.value target=(concat "data.description.value") button=true owner=true editable=true}}
         </div>
       {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
