--- a/src/templates/actor/parts/general/general.hbs
+++ b/src/templates/actor/parts/general/general.hbs
@@ -29,6 +29,7 @@
           {{> "systems/animabf/templates/actor/parts/general/parts/titles.hbs"}}
         </div>
         <div>
+          {{> "systems/animabf/templates/actor/parts/general/parts/regeneration.hbs"}}
           {{> "systems/animabf/templates/actor/parts/general/parts/contacts.hbs"}}
           {{> "systems/animabf/templates/actor/parts/general/parts/notes.hbs"}}
         </div>
