#92: Implementar opción para que salgan tiradas abiertas con resultados dobles si al lanzar 1d10 adicional sale el mismo numero

--- a/src/templates/actor/parts/settings/parts/advancedSettings.hbs
+++ b/src/templates/actor/parts/settings/parts/advancedSettings.hbs
@@ -22,6 +22,14 @@
       inputName="data.general.ranges.fumbles.value"
       inputValue= data.data.general.ranges.fumbles.value
     }}
+    {{>
+      "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+        class="doubles"
+        title= (localize "anima.ui.settings.advancedSettings.doubles")
+        inputType="checkbox"
+        inputName="data.general.ranges.openOnDoubles.value"
+        inputValue=data.data.general.ranges.openOnDoubles.value
+      }}
     
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
