--- a/src/templates/dialog/combat/combat-defense/combat-defense-dialog.hbs
+++ b/src/templates/dialog/combat/combat-defense/combat-defense-dialog.hbs
@@ -9,37 +9,39 @@
     {{#> "systems/animabf/templates/common/ui/group-body.hbs"
       class="defense-values"
     }}
-    <nav class="abf-tabs sheet-tabs tabs" data-group="primary">
-        {{#if (is 'eq' this.defender.actor.data.data.general.settings.defenseType.value 'resistance')}}<a class="item" data-tab="damageResistance">{{localize "anima.ui.tabs.damageResistance"}}</a>
-        {{else}}<a class="item" data-tab="combat">{{localize "anima.ui.tabs.combat"}}</a>{{/if}}
-        {{#if (is 'gt' this.defender.actor.data.data.mystic.spells.length 0)}}<a class="item" data-tab="mystic">{{localize "anima.ui.tabs.mystic"}}</a>{{/if}}
-        {{#if (is 'gt' this.defender.actor.data.data.psychic.psychicPowers.length 0)}}<a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>{{/if}}
-    </nav>
-
-      <div class='columns'>
-        <div>
-          {{>
-              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-              title=(localize 'macros.combat.dialog.noRoll.title')
-              disabled=this.defenseSent
-              inputType="checkbox"
-              inputName="defender.withoutRoll"
-              inputValue=(is 'eq' this.defender.withoutRoll true)
-          }}
-        </div>
-        <div>
-          {{#if this.ui.isGM}}
+      <nav class="abf-tabs sheet-tabs tabs" data-group="primary">
+          {{#if (is 'eq' this.defender.actor.data.data.general.settings.defenseType.value 'resistance')}}<a class="item" data-tab="damageResistance">{{localize "anima.ui.tabs.damageResistance"}}</a>
+          {{else}}<a class="item" data-tab="combat">{{localize "anima.ui.tabs.combat"}}</a>{{/if}}
+          {{#if (is 'gt' this.defender.actor.data.data.mystic.spells.length 0)}}<a class="item" data-tab="mystic">{{localize "anima.ui.tabs.mystic"}}</a>{{/if}}
+          {{#if (is 'gt' this.defender.actor.data.data.psychic.psychicPowers.length 0)}}<a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>{{/if}}
+      </nav>
+      {{log  this}}
+      {{#if (is 'neq' this.ui.activeTab 'damageResistance')}}
+        <div class='columns'>
+          <div>
             {{>
-            "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-              title=(localize 'macros.combat.dialog.showRoll.title')
-              disabled=this.defenseSent
-              inputType="checkbox"
-              inputName="defender.showRoll"
-              inputValue=(is 'eq' this.defender.showRoll true)
+                "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+                title=(localize 'macros.combat.dialog.noRoll.title')
+                disabled=this.defenseSent
+                inputType="checkbox"
+                inputName="defender.withoutRoll"
+                inputValue=(is 'eq' this.defender.withoutRoll true)
             }}
-          {{/if}}
+          </div>
+          <div>
+            {{#if this.ui.isGM}}
+              {{>
+              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+                title=(localize 'macros.combat.dialog.showRoll.title')
+                disabled=this.defenseSent
+                inputType="checkbox"
+                inputName="defender.showRoll"
+                inputValue=(is 'eq' this.defender.showRoll true)
+              }}
+            {{/if}}
+          </div>
         </div>
-      </div>
+      {{/if}}
 
       {{#if (and (is "neq" this.attacker.critic "-") this.attacker.critic)}}
         {{>
