--- a/src/templates/actor/parts/domine/parts/ki-skills.hbs
+++ b/src/templates/actor/parts/domine/parts/ki-skills.hbs
@@ -1,5 +1,7 @@
 {{#> "systems/animabf/templates/common/ui/group.hbs"
   class="ki-skills"
+  contractible=true
+  contractibleItemId=data.data.domine.kiSkills
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
