Closes #134: Fixes bug where enormous and giant weapons increas the strength modifiers + added new editable field in combat to give a flat modifier to all weapon's damage. This can be a temporary fix until we fully implement the ki skills tree to simulate Aura extension and Increased Damage

--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -57,5 +57,12 @@
       inputName="data.combat.wearArmor.value"
       inputValue=data.data.combat.wearArmor.value
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="wear-armor"
+      title=(localize "anima.ui.combat.baseValues.extraDamage.title")
+      inputName="data.general.modifiers.extraDamage.value"
+      inputValue=data.data.general.modifiers.extraDamage.value
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
