Closes #37: Se ha dividido la proyección psíquica en ofensiva y defensica. El campo proyección psíquica a secas se ha quitado de la ficha y el combate automatizado utilizará directamente la proyección ofensiva o defensiva según toque

--- a/src/templates/actor/parts/psychic/parts/psychic-projection.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-projection.hbs
@@ -12,7 +12,7 @@
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="offensive"
-        title=(localize "anima.uipsychic.psychicProjection.offensive.title")
+        title=(localize "anima.ui.psychic.psychicProjection.offensive.title")
         rollable=true
         rollableMessage=(localize "anima.ui.psychic.psychicProjection.offensive.rollMessage")
         inputName="data.psychic.psychicProjection.imbalance.offensive.base.value"
@@ -27,7 +27,7 @@
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="defensive"
-        title=(localize "anima.ui.mystic.psychicProjection.defensive.title")
+        title=(localize "anima.ui.psychic.psychicProjection.defensive.title")
         rollable=true
         rollableMessage=(localize "anima.ui.psychic.psychicProjection.defensive.rollMessage")
         inputName="data.psychic.psychicProjection.imbalance.defensive.base.value"
