--- a/src/scss/actor/parts/psychic.scss
+++ b/src/scss/actor/parts/psychic.scss
@@ -7,7 +7,7 @@
 
     .first-row {
       display: grid;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 1fr 4fr;
       grid-column-gap: 1rem;
     }
 
@@ -27,6 +27,24 @@
       margin-top: 0.75rem;
     }
     // Grids
+
+    // Psychic Projection
+    .psychic-projection {
+      .title {
+        font-weight: bold;
+        margin-top: 1rem;
+        margin-bottom: 0.25rem;
+
+        text-align: center;
+      }
+
+      .imbalance {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 1rem;
+      }
+    }
+    // Psychic Projection
 
     // Psychic Disciplines
     .psychic-disciplines {
