arrows to navigate defenders

--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -11,9 +11,11 @@
         class="attack-values"
       }}
         <div class='combatant-profile'>
+          <img class="previous-defender" src="/systems/animabf/assets/icons/game-icons.net/ffffff/lorc.arrow-dunk.svg" />
           <div class='image'>
             <img src='{{this.attacker.actor.img}}' data-edit='img' title='{{this.attacker.token.name}}' />
           </div>
+          <img class="next-defender" src="/systems/animabf/assets/icons/game-icons.net/ffffff/lorc.arrow-dunk.svg" />
           <p class='label name'>
             {{this.attacker.token.name}}
           </p>
