add translations and input for ethnicity

--- a/src/templates/actor/actor-sheet.hbs
+++ b/src/templates/actor/actor-sheet.hbs
@@ -2,7 +2,7 @@
   <header class='header-fields'>
     {{> "systems/animabf/templates/actor/parts/header/header.hbs"}}
   </header>
-
+  <h1> HEY MADAFAKAS</h1>
   {{!-- Character Sheet Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="main">{{localize "anima.ui.tabs.main"}}</a>
