--- a/src/templates/actor/parts/general/parts/aspect.hbs
+++ b/src/templates/actor/parts/general/parts/aspect.hbs
@@ -58,6 +58,14 @@
     }}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="ethnicity"
+      title=(localize 'anima.ui.aspectSection.ethnicity.title')
+      inputType="text"
+      inputName="data.general.aspect.ethnicity.value"
+      inputValue=data.data.general.aspect.ethnicity.value
+    }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="appearance"
       title=(localize 'anima.ui.aspectSection.appearance.title')
       inputType="text"
