--- a/src/templates/dialog/combat/combat-attack/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/combat.hbs
@@ -41,6 +41,8 @@
   {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 {{/if}}
 
+<div id="svelte-component"></div>
+
 {{#unless this.attacker.combat.unarmed}}
   {{#if this.ui.weaponHasSecondaryCritic}}
     {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
